# PodOfCast

./: .gitignore  README.md  pyproject.toml
backend/podcast_service/: pyproject.toml
backend/podcast_service/podcast_service/config/: settings.py  urls.py  wsgi.py
backend/podcast_service/podcasts/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
backend/podcast_service/podcasts/migrations/: 0001_initial.py
backend/user_service/: pyproject.toml  pytest.ini
backend/user_service/user_service/: conftest.py
backend/user_service/user_service/config/: settings.py
backend/user_service/user_service/user_service/: settings.py  urls.py
backend/user_service/user_service/users/: admin.py  middlewares.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/user_service/user_service/users/migrations/: 0001_initial.py  0002_rename_name_user_first_name_user_company_name_and_more.py  0003_alter_user_bio.py  0004_alter_user_followed_blogs_and_more.py  0005_alter_user_followed_blogs_and_more.py  0006_user_followed_users.py  0007_user_date_of_birth.py  0008_user_last_visit.py
frontend/podofcast/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/podofcast/api/: api.ts
frontend/podofcast/app/: globals.css  layout.tsx  page.tsx
frontend/podofcast/components/: Burger.tsx  DeleteProfileForm.tsx  EditProfileForm.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  Loader.tsx  MobileNav.tsx  OAuthSection.tsx  OnboardingForm.tsx  ResetPasswordForm.tsx  RestorePasswordForm.tsx  SignInForm.tsx  SignUpForm.tsx  (+2 more)
(+29 files in other folders)
